# Selbstbildung

./: LICENSE  algorithms.ipynb  scratch.ipynb
DAT236x/: Lab2_LogisticRegression.ipynb  Lab3_MultiLayerPerceptron.ipynb  Lab4_ConvolutionalNeuralNetwork.ipynb  Lab5_RecurrentNetwork.ipynb  pyproject.toml
DAT236x/.ipynb_checkpoints/: Lab1_MNIST_DataLoader-checkpoint.ipynb  Lab2_LogisticRegression-checkpoint.ipynb  Lab3_MultiLayerPerceptron-checkpoint.ipynb  Lab4_ConvolutionalNeuralNetwork-checkpoint.ipynb  Lab6_TextClassification_with_LSTM-checkpoint.ipynb
DAT257x-Reinforcement-Learning-Explained/: pyproject.toml
DAT257x-Reinforcement-Learning-Explained/Module 1/: Ex1.3 Random.ipynb
DAT263x/: Vision.ipynb  (+2 more)
udemy-python-for-data-science/: 02 Seaborn 2 Matrix Plots.ipynb  04 Seaborn 4 Grids.ipynb  05 Seaborn 5 Exercises.ipynb  07 Pandas Built-in Data Visualization Exercises.ipynb  09 Geographic Plotting.ipynb  10 Choropleth Maps Exercises.ipynb  12 Finance Capstone Project.ipynb  13 Linear Regression.ipynb  14 Linear Regression Exercise.ipynb  15 Logistic Regression.ipynb  16 Logistic Regression Project.ipynb  18 KNN Project.ipynb  20 Random Forest Project.ipynb  21 Support Vector Machines.ipynb  22 SVM Project.ipynb  25 Principal Component Analysis.ipynb  28 Natural Language Processing.ipynb  29 NLP Project.ipynb  30 Tensorflow Basics.ipynb  31 Tensorflow MNIST.ipynb  33 Tensorflow Project.ipynb  pyproject.toml
udemy-python-for-data-science/.ipynb_checkpoints/: 03 Seaborn 3 Regression Plots-checkpoint.ipynb  06 Pandas Built-in Data Visualization-checkpoint.ipynb  (+15 more)
(+129 files in other folders)
