[tool.poetry]
name = "dat236x"
version = "0.1.0"
description = ""
authors = ["Christopher Perry <ozbonus@gmail.com>"]

[tool.poetry.dependencies]
python = "*"
numpy = "*"
pandas = "*"
scipy = "*"
matplotlib = "*"
cntk-gpu = "*"
quotes = "^0.0.3"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
