[tool.poetry]
name = "dat257x-reinforcement-learning-explained"
version = "0.1.0"
description = ""
authors = ["Christopher Perry <ozbonus@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6"
numpy = "^1.15"
pandas = "^0.23.4"
matplotlib = "^3.0"
cntk-gpu = "^2.6"
gym = "^0.10.9"
chainer = "^5.1"
jupyterlab = "^0.35.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
