[tool.poetry]
name = "udemy-python-for-data-science"
version = "0.1.0"
description = ""
authors = ["Christopher Perry <ozbonus@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6"
numpy = "^1.15"
matplotlib = "^3.0"
pandas = "^0.23.4"
seaborn = "^0.9.0"
tensorflow = "^1.12"
jupyterlab = "^0.35.4"
scikit-learn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
